force-app/main/default/objects/Account/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <label>Account Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ZH</fullName>
                <label>Zuid Holland</label>
            </value>
            <value>
                <fullName>NH</fullName>
                <label>Noord Holland</label>
            </value>
            <value>
                <fullName>UT</fullName>
                <label>Utrecht</label>
            </value>
            <value>
                <fullName>NB</fullName>
                <label>Noord Brabant</label>
            </value>
            <value>
                <fullName>GE</fullName>
                <label>Gelderland</label>
            </value>
            <value>
                <fullName>ZE</fullName>
                <label>Zeeland</label>
            </value>
            <value>
                <fullName>LB</fullName>
                <label>Limboland</label>
            </value>
            <value>
                <fullName>GR</fullName>
                <label>Groningen / Friesland</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>