force-app/main/default/objects/Account/fields/Afgesproken_Betaaltermijn__c.field-meta.xml
<CustomField>
    <fullName>Afgesproken_Betaaltermijn__c</fullName>
    <label>Afgesproken Betaaltermijn</label>
    <length>255</length>
    <type>Text</type>
</CustomField>