force-app/main/default/objects/Account/fields/Bank_Country__c.field-meta.xml
<CustomField>
    <fullName>Bank_Country__c</fullName>
    <label>Bank Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>