force-app/main/default/objects/Account/fields/Betaal_Proces__c.field-meta.xml
<CustomField>
    <fullName>Betaal_Proces__c</fullName>
    <label>Betaal Proces</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>