force-app/main/default/objects/Account/fields/Blockmailshot_By__c.field-meta.xml
<CustomField>
    <fullName>Blockmailshot_By__c</fullName>
    <label>Blockmailshot By</label>
    <length>5</length>
    <type>Text</type>
</CustomField>