force-app/main/default/objects/Account/fields/BTW_Number__c.field-meta.xml
<CustomField>
    <fullName>BTW_Number__c</fullName>
    <label>BTW Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>