force-app/main/default/objects/Account/fields/Business_Clients__c.field-meta.xml
<CustomField>
    <fullName>Business_Clients__c</fullName>
    <label>Business Clients</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>