force-app/main/default/objects/Account/fields/Business_Competitors__c.field-meta.xml
<CustomField>
    <fullName>Business_Competitors__c</fullName>
    <label>Business Competitors</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>