force-app/main/default/objects/Account/fields/Business_Goals__c.field-meta.xml
<CustomField>
    <fullName>Business_Goals__c</fullName>
    <label>Business Goals</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>