force-app/main/default/objects/Account/fields/Credit_Check__c.field-meta.xml
<CustomField>
    <fullName>Credit_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit Check</label>
    <type>Checkbox</type>
</CustomField>