force-app/main/default/objects/Account/fields/Credit_Graydon_Check__c.field-meta.xml
<CustomField>
    <fullName>Credit_Graydon_Check__c</fullName>
    <label>Credit Graydon Check</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>