force-app/main/default/objects/Account/fields/Credit_Graydon_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Graydon_Date__c</fullName>
    <label>Credit Graydon Date</label>
    <type>DateTime</type>
</CustomField>