force-app/main/default/objects/Account/fields/Credit_Self_Judgement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Credit_Self_Judgement_Amount__c</fullName>
    <label>Credit Self Judgement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>