force-app/main/default/objects/Account/fields/Creditcheck_Akkoord_Date__c.field-meta.xml
<CustomField>
    <fullName>Creditcheck_Akkoord_Date__c</fullName>
    <label>Creditcheck Akkoord Date</label>
    <type>DateTime</type>
</CustomField>