force-app/main/default/objects/Account/fields/Creditcheck_Anders__c.field-meta.xml
<CustomField>
    <fullName>Creditcheck_Anders__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Creditcheck Anders</label>
    <type>Checkbox</type>
</CustomField>