force-app/main/default/objects/Account/fields/Creditcheck_Anders_Date__c.field-meta.xml
<CustomField>
    <fullName>Creditcheck_Anders_Date__c</fullName>
    <label>Creditcheck Anders Date</label>
    <type>DateTime</type>
</CustomField>