force-app/main/default/objects/Account/fields/Creditcheck_Anders_Type__c.field-meta.xml
<CustomField>
    <fullName>Creditcheck_Anders_Type__c</fullName>
    <label>Creditcheck Anders Type</label>
    <length>10</length>
    <type>Text</type>
</CustomField>