force-app/main/default/objects/Account/fields/Creditcheck_Bedrag_Akkoord__c.field-meta.xml
<CustomField>
    <fullName>Creditcheck_Bedrag_Akkoord__c</fullName>
    <label>Creditcheck Bedrag Akkoord</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>