force-app/main/default/objects/Account/fields/Email_Herinneringen__c.field-meta.xml
<CustomField>
    <fullName>Email_Herinneringen__c</fullName>
    <label>Email Herinneringen</label>
    <length>255</length>
    <type>Text</type>
</CustomField>