force-app/main/default/objects/Account/fields/Expertice_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Expertice_Capacity__c</fullName>
    <label>Expertice vs Capacity</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>