force-app/main/default/objects/Account/fields/Facts_Figures__c.field-meta.xml
<CustomField>
    <fullName>Facts_Figures__c</fullName>
    <label>Facts Figures</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>