force-app/main/default/objects/Account/fields/Facturactie_tav__c.field-meta.xml
<CustomField>
    <fullName>Facturactie_tav__c</fullName>
    <label>Facturactie tav</label>
    <length>255</length>
    <type>Text</type>
</CustomField>