force-app/main/default/objects/Account/fields/Factuur_Gem_Betaaltermijn__c.field-meta.xml
<CustomField>
    <fullName>Factuur_Gem_Betaaltermijn__c</fullName>
    <label>Factuur Gem Betaaltermijn</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>