force-app/main/default/objects/Account/fields/Is_Perm__c.field-meta.xml
<CustomField>
    <fullName>Is_Perm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Perm</label>
    <type>Checkbox</type>
</CustomField>