force-app/main/default/objects/Account/fields/IT_Responsible__c.field-meta.xml
<CustomField>
    <fullName>IT_Responsible__c</fullName>
    <label>IT Responsible</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>