force-app/main/default/objects/Account/fields/IT_Team_Structure__c.field-meta.xml
<CustomField>
    <fullName>IT_Team_Structure__c</fullName>
    <label>IT Team Structure</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>