force-app/main/default/objects/Account/fields/KVK_Nummer__c.field-meta.xml
<CustomField>
    <fullName>KVK_Nummer__c</fullName>
    <label>KVK Nummer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>