force-app/main/default/objects/Account/fields/LinkedIn_Address__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Address__c</fullName>
    <label>LinkedIn Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>