force-app/main/default/objects/Account/fields/LinkedIn_CW_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_CW_Recruiter__c</fullName>
    <label>LinkedIn CW Recruiter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>