force-app/main/default/objects/Account/fields/LinkedIn_Found__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LinkedIn Found</label>
    <type>Checkbox</type>
</CustomField>