force-app/main/default/objects/Account/fields/LinkedIn_Imported__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LinkedIn Imported</label>
    <type>Checkbox</type>
</CustomField>