force-app/main/default/objects/Account/fields/LinkedIn_Recruiter__c.field-meta.xml
<CustomField>
    <fullName>LinkedIn_Recruiter__c</fullName>
    <label>LinkedIn Recruiter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>