force-app/main/default/objects/Account/fields/Overall_ID__c.field-meta.xml
<CustomField>
    <fullName>Overall_ID__c</fullName>
    <label>Overall ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>