force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Business Qualification</fullName>
            </value>
            <value>
                <fullName>Team Qualification</fullName>
            </value>
            <value>
                <fullName>Hotness</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
            <value>
                <fullName>Not Qualified</fullName>
            </value>
            <value>
                <fullName>Freelance Qualified</fullName>
            </value>
            <value>
                <fullName>Perm Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>