force-app/main/default/objects/Account/fields/Strong_Team__c.field-meta.xml
<CustomField>
    <fullName>Strong_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Strong Team</label>
    <type>Checkbox</type>
</CustomField>