force-app/main/default/objects/Account/fields/Team_Progress__c.field-meta.xml
<CustomField>
    <fullName>Team_Progress__c</fullName>
    <label>Team Progress</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>