force-app/main/default/objects/Account/fields/Technical_Issues__c.field-meta.xml
<CustomField>
    <fullName>Technical_Issues__c</fullName>
    <label>Technical Issues</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>