force-app/main/default/objects/Account/fields/toCheck__c.field-meta.xml
<CustomField>
    <fullName>toCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>toCheck</label>
    <type>Checkbox</type>
</CustomField>