force-app/main/default/objects/Account/fields/Vacancy_Page__c.field-meta.xml
<CustomField>
    <fullName>Vacancy_Page__c</fullName>
    <label>Vacancy Page</label>
    <type>Url</type>
</CustomField>