force-app/main/default/objects/Account/fields/X_Factor__c.field-meta.xml
<CustomField>
    <fullName>X_Factor__c</fullName>
    <label>X-Factor</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>