force-app/main/default/objects/Account/recordTypes/Business_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Business_Record_Type</fullName>
    <active>false</active>
    <label>Business Record Type</label>
</RecordType>