force-app/main/default/objects/Account/recordTypes/Freelance.recordType-meta.xml
<RecordType>
    <fullName>Freelance</fullName>
    <active>true</active>
    <label>Freelance</label>
</RecordType>