force-app/main/default/objects/Account/validationRules/Postal_Code_Netherlands_Format.validationRule-meta.xml
<ValidationRule>
    <fullName>Postal_Code_Netherlands_Format</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(ShippingPostalCode)),NOT(REGEX( ShippingPostalCode, &quot;[0-9]{4}\\s[A-Z]{2}&quot;)))</errorConditionFormula>
    <errorDisplayField>ShippingPostalCode</errorDisplayField>
    <errorMessage>Shipping Post code format is 1234 AB</errorMessage>
</ValidationRule>