force-app/main/default/objects/Account/listViews/Key_Accounts.listView-meta.xml
<ListView>
    <fullName>Key_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>ACCOUNT.INDUSTRY</field>
        <operation>equals</operation>
        <value>Agriculture</value>
    </filters>
    <label>Key Accounts</label>
</ListView>